<?xml version="1.0" encoding="UTF-8" ?>
<project
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
>
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.gama</groupId>
	<artifactId>gama.annotations</artifactId>
	<version>0.0.0-SNAPSHOT</version>

	<distributionManagement>
		<repository>
			<uniqueVersion>true</uniqueVersion>
			<id>p2Repo</id>
			<url>scp://152.228.133.219/./var/www/gama_updates/0.0.0</url>
		</repository>
		<snapshotRepository>
			<uniqueVersion>true</uniqueVersion>
			<id>p2Repo</id>
			<url>scp://152.228.133.219/./var/www/gama_updates/0.0.0</url>
		</snapshotRepository>
	</distributionManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<tycho.version>4.0.11</tycho.version>
		<jdk.version>21</jdk.version>
		<codehaus.wagon.version>2.0.2</codehaus.wagon.version>
		<wagon.version>3.5.3</wagon.version>
		<maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
		<maven.plugins.version>3.0.0</maven.plugins.version>

		<sonar.organization>gama-platform</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
	</properties>

	<profiles>
		<!-- This profile is used while local compiling
		Prevent signing error while env variable is not set -->
		<profile>
			<id>local-dev</id>
		</profile>

		<!-- This profile is used to upload the repo -->
		<profile>
			<id>p2Repo</id>
			<properties>
				<!-- Properties relative to the distant host where to upload the repo -->
				<ftp.url>scp://152.228.133.219</ftp.url>
				<ftp.toDir>/var/www/gama_updates/0.0.0</ftp.toDir>
				<!-- Relative path to the repo being uploaded -->
				<repo.path>${project.build.directory}/repository/</repo.path>
			</properties>

			<activation>
				<file>
					<exists>../sign.maven</exists>
				</file>
			</activation>

			<build>
				<plugins>

					<!-- Upload the repo to the server -->
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>wagon-maven-plugin</artifactId>
						<version>${codehaus.wagon.version}</version>
						<executions>
							<execution>
								<id>p2Repo</id>
								<phase>deploy</phase>
								<goals>
									<goal>upload</goal>
								</goals>
								<configuration>
									<rules>
										<requireFilesSize>
											<maxsize>50000</maxsize>
											<minsize>90</minsize>
										</requireFilesSize>
									</rules>
									<fromDir>${repo.path}</fromDir>
									<includes>**</includes>
									<toDir>${ftp.toDir}</toDir>
									<url>${ftp.url}</url>
									<serverId>p2Repo</serverId>
									<!-- Points to your settings.xml where the connection settings are
									stored as shown below -->
									<!-- <server> -->
									<!-- <id>p2Repo</id> -->
									<!-- <username>username</username> -->
									<!-- <password>password</password> -->
									<!-- </server> -->
								</configuration>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-jarsigner-plugin</artifactId>
						<version>${maven.plugins.version}</version>
						<executions>
							<execution>
								<id>sign</id>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<keystore>~/gama.keystore</keystore>
							<alias>gama-platform</alias>
							<storepass>GAMA_PLATFORM</storepass>
							<keypass />
						</configuration>
					</plugin>

				</plugins>
			</build>
		</profile>
	</profiles>


	<build>
		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-ssh-external</artifactId>
				<version>${wagon.version}</version>
			</extension>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-ssh</artifactId>
				<version>${wagon.version}</version>
			</extension>
		</extensions>

		<!-- <plugins combine.self="override"> -->
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>${maven.plugins.version}</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.wagon</groupId>
						<artifactId>wagon-ssh</artifactId>
						<version>${wagon.version}</version>
					</dependency>
				</dependencies>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-compiler-plugin</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho.version}</version>
				<extensions>true</extensions>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
					<compilerArgument>-proc:none</compilerArgument>
				</configuration>
				<!-- FIX the JDT core due to bug in tycho https://www.eclipse.org/forums/index.php/t/1068443/ -->
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho.version}</version>
			</plugin>

			<!-- Code Review for PR
			Execute by running `mvn -B verify spotbugs:spotbugs` -->
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>4.9.3.0</version>
				<configuration>
					<xmlOutput>true</xmlOutput>
					<failOnError>false</failOnError>
				</configuration>
			</plugin>

		</plugins>
	</build>
	<packaging>eclipse-plugin</packaging>
</project>
